5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1616_2946.log
== TEST (2019-04-01 15:06:43) 
-- CODE:

ml = float(input("media dos laboratorios:"))
mt = float(input("media dos trabalhos"))
mp = float(input("media das provas:"))
nf = (ml + mt + mp)
print(round(nf,2))
-- OUTPUT:
19.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:06:48) 
-- CODE:

ml = float(input("media dos laboratorios:"))
mt = float(input("media dos trabalhos"))
mp = float(input("media das provas:"))
nf = (ml + mt + mp)
print(round(nf,2))
-- OUTPUT:
19.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:07:53) 
-- CODE:

ml = float(input("media dos laboratorios:"))
mt = float(input("media dos trabalhos"))
mp = float(input("media das provas:"))
nf = (ml + mt + mp)/3
print(round(nf,2))
-- OUTPUT:
6.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:54) 
-- CODE:

ml = float(input("media dos laboratorios:"))
mt = float(input("media dos trabalhos:"))
mp = float(input("media das provas:"))
nf = ((ml*25%) + (mt*30%) + (mp%45)/3
print(round(nf,2))
-- ERROR:
File "XXXX", line 5
    nf = ((ml*25%) + (mt*30%) + (mp%45)/3
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:05) 
-- CODE:
ml = float(input("media dos laboratorios:"))
mt = float(input("media dos trabalhos:"))
mp = float(input("media das provas:"))
nf = ((ml*0.25) + (mt*0.30) + (mp*0.45)/3
print(round(nf,2))
-- ERROR:
File "XXXX", line 5
    print(round(nf,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:35) 
-- CODE:
ml = float(input("media dos laboratorios:"))
mt = float(input("media dos trabalhos:"))
mp = float(input("media das provas:"))
nf = ((ml*0.25) + (mt*0.30) + (mp*0.45))/3
print(round(nf,2))
-- OUTPUT:
2.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:56) 
-- CODE:
ml = float(input("media dos laboratorios:"))
mt = float(input("media dos trabalhos:"))
mp = float(input("media das provas:"))
nf = ((ml*0.25) + (mt*0.30) + (mp*0.45))
print(round(nf,2))
-- OUTPUT:
6.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:12:10) 
-- CODE:
ml = float(input("media dos laboratorios:"))
mt = float(input("media dos trabalhos:"))
mp = float(input("media das provas:"))
nf = ((ml*0.25) + (mt*0.30) + (mp*0.45))
print(round(nf,2))
-- EXECUTION TIME:
0.138927
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.31
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
